--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nx/linter": "16.6.0",
     "@nx/node": "16.6.0",
     "@nx/workspace": "16.6.0",
+    "@swc/jest": "0.2.20",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
