--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,5 +12,5 @@ jobs:
       - uses: nrwl/nx-set-shas@v3
       - run: npm i
 
-      - run: npx nx affected -t test --parallel=3 --configuration=ci
+      - run: npx nx affected -t test
 
