--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,5 +16,5 @@ jobs:
 
       - run: "git branch --track ${{github.base_ref}} origin/${{github.base_ref}}"
       - run: "git branch --track ${{github.head_ref}} origin/${{github.head_ref}}"
-      - run: npx nx affected -t test --base=main --head=vinicius-pimenta
+      - run: npx nx affected -t test --base=${{ github.base_ref }} --head=${{ github.head_ref }}
 
