--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,5 +16,5 @@ jobs:
 
       # - run: "git branch --track ${{github.base_ref}} origin/${{github.base_ref}}"
       # - run: "git branch --track ${{github.head_ref}} origin/${{github.head_ref}}"
-      - run: npx nx affected -t test --base=${{ github.event.before }} --head=${{ github.sha }}
+      - run: npx nx affected -t test --base=${{ github.event.pull_request.base.sha }} --head=${{ github.event.pull_request.head.sha }}
 
